# uqm

sc2/: CMakeLists.txt
sc2/src/: CMakeLists.txt  config_cmake.h.in
sc2/src/getopt/: CMakeLists.txt
sc2/src/libs/: CMakeLists.txt
sc2/src/libs/callback/: CMakeLists.txt
sc2/src/libs/decomp/: CMakeLists.txt
sc2/src/libs/file/: CMakeLists.txt
sc2/src/libs/graphics/: CMakeLists.txt
sc2/src/libs/graphics/sdl/: CMakeLists.txt
sc2/src/libs/heap/: CMakeLists.txt
sc2/src/libs/input/: CMakeLists.txt
sc2/src/libs/input/sdl/: CMakeLists.txt
sc2/src/libs/list/: CMakeLists.txt
sc2/src/libs/log/: CMakeLists.txt
sc2/src/libs/math/: CMakeLists.txt
sc2/src/libs/memory/: CMakeLists.txt
sc2/src/libs/mikmod/: CMakeLists.txt
sc2/src/libs/network/: CMakeLists.txt
sc2/src/libs/resource/: CMakeLists.txt
sc2/src/libs/sound/: CMakeLists.txt
sc2/src/libs/sound/decoders/: CMakeLists.txt
sc2/src/libs/sound/mixer/: CMakeLists.txt
sc2/src/libs/strings/: CMakeLists.txt
sc2/src/libs/task/: CMakeLists.txt
sc2/src/libs/threads/: CMakeLists.txt
sc2/src/libs/time/: CMakeLists.txt
sc2/src/libs/uio/: CMakeLists.txt
sc2/src/libs/video/: CMakeLists.txt
sc2/src/regex/: CMakeLists.txt
sc2/src/uqm/: CMakeLists.txt
sc2/src/uqm/comm/: CMakeLists.txt
sc2/src/uqm/planets/: CMakeLists.txt
sc2/src/uqm/ships/: CMakeLists.txt
sc2/src/uqm/supermelee/: CMakeLists.txt
sc2/src/uqm/supermelee/netplay/: CMakeLists.txt
