add_subdirectory(callback)
add_subdirectory(decomp)
add_subdirectory(file)
add_subdirectory(graphics)
add_subdirectory(heap)
add_subdirectory(input)
add_subdirectory(list)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(resource)
add_subdirectory(sound)
add_subdirectory(strings)
add_subdirectory(task)
add_subdirectory(threads)
add_subdirectory(time)
add_subdirectory(uio)
add_subdirectory(video)
add_subdirectory(log)
add_subdirectory(mikmod)

set(LIBRARIES callback decomp file graphics heap input list math
    memory resource sound strings task threads time uio video log mikmod)

if(NETPLAY)
    add_subdirectory(network)
    list(APPEND LIBRARIES network)
endif()

add_library(libs INTERFACE)
set_property(TARGET libs PROPERTY INTERFACE_LINK_LIBRARIES ${LIBRARIES})
